--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -28,19 +29,21 @@
     "prettier": "^2.8.4",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
-    "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.2.0"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "@types/qs": "^6.9.7",
     "ahooks": "^3.7.5",
     "antd": "^5.1.7",
     "axios": "^1.3.2",
     "lodash": "^4.17.21",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "rollup-plugin-visualizer": "^5.9.0"
   },
   "lint-staged": {
     "src/**/*.{jsx,tsx,ts}": [
